--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>client-service</artifactId>
+	<!-- <version>0.0.2-SNAPSHOT</version> -->
 	<packaging>jar</packaging>
 
 	<name>client-service</name>
@@ -13,7 +14,6 @@
 		<groupId>com.imoral.cloud</groupId>
 		<artifactId>spring-cloud-microservices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<dependencies>
