--- a/config-server-service/pom.xml
+++ b/config-server-service/pom.xml
@@ -5,6 +5,7 @@
 
 	<groupId>com.imoral.cloud.config</groupId>
 	<artifactId>config-server-service</artifactId>
+	<!--  version>0.0.2-SNAPSHOT</version>-->
 	<packaging>jar</packaging>
 
 	<name>config-server-service</name>
@@ -14,7 +15,6 @@
 		<groupId>com.imoral.cloud</groupId>
 		<artifactId>spring-cloud-microservices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<dependencies>
