--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -96,6 +99,7 @@
 	<modules>
 		<module>config-server-service</module>
 		<module>client-service</module>
+		<module>eureka-server-service</module>
 	</modules>
 
 </project>
